rhbk26/keycloak-management-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-management
  namespace: keycloak
spec:
  host: kc-admin.apps.cluster-g9zwl.g9zwl.sandbox1850.opentlc.com
# delete the /auth if you want to keep the default one, so it will be /management only
  path: /management
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: management
  tls:
    termination: edge
  wildcardPolicy: None
