rhbk26/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-apps
  namespace: keycloak
  labels:
    app: keycloak
    app.kubernetes.io/instance: keycloak
spec:
  host: keycloak.apps.cluster-g9zwl.g9zwl.sandbox1850.opentlc.com
# delete the /auth if you want to keep the default one
  path: /auth
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
